# libguestfs-common

./: .gitignore  README  update-submodule.sh
edit/: Makefile.am  file-edit.c
mlaugeas/: .gitignore  augeas-c.c  test_augeas.ml
mlcustomize/: Makefile.am  SELinux_relabel.ml  crypt-c.c  customize-options.pod  customize-synopsis.pod  customize_cmdline.ml  customize_cmdline.mli  customize_run.ml  firstboot.ml  firstboot.mli  guest_packages.ml  guest_packages.mli  hostname.ml  hostname.mli  inject_virtio_win.ml  inject_virtio_win.mli  password.ml  password.mli  random_seed.ml  random_seed.mli  test-firstboot.sh  test-selinuxrelabel.sh  timezone.mli  v2v-customize-options.pod  v2v-customize-synopsis.pod
mldrivers/: Makefile.am  firmware.ml  firmware.mli  linux.ml  linux.mli  linux_bootloaders.ml  linux_bootloaders.mli  linux_kernels.ml  linux_kernels.mli  windows_drivers.ml  windows_drivers.mli
mlgettext/: Makefile.am
mlpcre/: Makefile.am  PCRE.ml  PCRE.mli  pcre-c.c  pcre_tests.ml
mlprogress/: Makefile.am  progress-c.c  progress.ml  progress.mli
mlstdutils/: Makefile.am  guestfs_config.ml.in  guestfs_config.mli  std_utils.ml  std_utils.mli  std_utils_tests.ml
mltools/: DOM.ml  DOM.mli  JSON_parser-c.c  JSON_parser.ml  JSON_parser.mli  JSON_parser_tests.ml  JSON_tests.ml  Makefile.am  curl.ml  curl.mli  getopt-c.c  getopt.ml  libosinfo-c.c  libosinfo.ml  libosinfo.mli  libosinfo_utils.ml  libosinfo_utils.mli  on_exit.ml  on_exit.mli  registry.ml  test-getopt.sh  test-machine-readable.sh  test-tools-messages.sh  tools_utils-c.c  tools_utils.ml  tools_utils.mli  tools_utils_tests.ml  xpath_helpers.ml
mlutils/: Makefile.am  c_utils-c.c  c_utils.ml  c_utils_unit_tests.ml  unix_utils-c.c  unix_utils.ml  unix_utils.mli
mlv2v/: Makefile.am  uefi.ml  uefi.mli
mlvisit/: Makefile.am  visit-c.c
mlxml/: Makefile.am  xml-c.c  xml.ml  xml.mli
options/: Makefile.am  blocksize-option.pod  decrypt.c  domain.c  inspect.c  key-option.pod  keys-from-stdin-option.pod  keys.c  options.c  options.h  uri.c  uri.h
parallel/: Makefile.am  parallel.c
progress/: Makefile.am  progress.c  progress.h
qemuopts/: qemuopts.c  qemuopts.h
structs/: Makefile.am  structs-cleanups.c  structs-cleanups.h  structs-print.c  structs-print.h
utils/: Makefile.am  cleanups.h  environ.c  gnulib-cleanups.c  guestfs-stringlists-utils.h  guestfs-utils.h  pcre2-cleanups.c  stringlists-utils.c  utils.c  whole-file.c
visit/: Makefile.am  visit.c
windows/: Makefile.am  windows.c
